Update 'nov29-newargocd' component image to: quay.io/jdubrick-ai/nov29-newargocd:782d8cc55652ce8ebf2bb05ea6576828417e8b93@sha256:e22d3dd204538633a5fac0ffdfdf32e61ad0f2c1e37ccded6404df5575937ff4

--- a/components/nov29-newargocd/overlays/development/deployment-patch.yaml
+++ b/components/nov29-newargocd/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: nov29-newargocd
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-ai-dev/ai-template-bootstrap-app:latest # use pre-built to bootstrap 
-        name: app-inference 
+        - image: quay.io/jdubrick-ai/nov29-newargocd:782d8cc55652ce8ebf2bb05ea6576828417e8b93@sha256:e22d3dd204538633a5fac0ffdfdf32e61ad0f2c1e37ccded6404df5575937ff4 # use pre-built to bootstrap 
+          name: app-inference
